--- a/src/Shop/Shop.css
+++ b/src/Shop/Shop.css
@@ -149,6 +149,10 @@ h1::after {
     box-shadow: 0 0 5px rgba(184, 154, 103, 0.5);
 }
 
+.size-select {
+    padding: 0.7rem;
+}
+
 .out-of-stock-text {
     font-weight: bold;
     color: #b89a67;
@@ -350,10 +354,6 @@ h1::after {
     transform: scale(1.05);
 }
 
-.size-select {
-    padding: 0.7rem;
-}
-
 .quantity-wrapper {
     display: flex;
     align-items: center;
@@ -443,68 +443,40 @@ h1::after {
 }
 
 small {
-    padding: 4px;
+    margin-top: 0.4rem;
+    margin-bottom: 0.4rem;
 }
 
-
-.color-select {
-    padding-top: 10px;
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-}
-
-.color-input-column {
-    display: flex;
-    flex-direction: column-reverse;
-    align-items: center;
-    gap: 6px;
-}
-
-.color-select input[type="number"] {
-    padding: 0.4rem 0.8rem;
-    border: 1px solid #ccc;
+.color-select select {
+    padding: 0.5rem 0.8rem;
     border-radius: 6px;
-    font-size: 0.9rem;
+    border: 1px solid #ccc;
     background-color: #fff;
+    font-size: 0.9rem;
+    font-weight: 500;
     cursor: pointer;
-    text-align: center;
-    max-width: 80px;
-    transition: border-color 0.2s;
+    transition: all 0.2s ease;
+    width: 100%;
+    box-sizing: border-box;
 }
 
-.color-select input[type="number"]:focus {
-    outline: none;
+.color-select select:hover {
     border-color: #b89a67;
 }
 
-.color-select button {
-    background-color: #b89a67;
-    color: #fff;
-    border: none;
-    border-radius: 6px;
-    padding: 0.5rem 1rem;
-    cursor: pointer;
-    font-size: 0.9rem;
-    font-weight: 600;
-    transition: background-color 0.3s ease, transform 0.2s ease;
-    max-width: 180px;
-    word-wrap: break-word;
-    text-align: center;
+.color-select select:focus {
+    outline: none;
+    border-color: #b89a67;
+    box-shadow: 0 0 5px rgba(184, 154, 103, 0.5);
 }
 
-.color-select button:hover {
-    background-color: #a1814f;
-    transform: scale(1.05);
-}
-
-.color-select span {
-    font-size: 0.9rem;
+.color-select label {
+    display: block;
     font-weight: 500;
-    text-align: center;
+    margin-top: 0.7rem;
+    margin-bottom: 0.5rem;
+    font-size: 0.9rem;
 }
-
-
 
 @media (max-width: 768px) {
     .shop-FS {
